# Competitive-Programming-Info-Scrap

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.prod  entrypoint.sh  gunicorn.conf.py  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt
project/: __init__.py  config.py
project/apis/: __init__.py  alive.py  redis.py
project/apis/atcoder/: api.py  utils.py
project/apis/codeforces/: api.py  utils.py
project/apis/leetcode/: api.py  util.py
project/apis/lightoj/: api.py  utils.py
project/apis/spoj/: api.py  utils.py
project/apis/vjudge/: api.py  utils.py
tests/: conftest.py
